Use sqlc for queries
