# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Todo"
+                            "$ref": "#/definitions/generated.CreateTodoParams"
                         }
                     }
                 ],
@@ -32,7 +32,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Todo"
+                            "$ref": "#/definitions/generated.CreateTodoParams"
                         }
                     },
                     "400": {
@@ -73,7 +73,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Todo"
+                            "$ref": "#/definitions/generated.Todo"
                         }
                     }
                 }
@@ -100,7 +100,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Todo"
+                            "$ref": "#/definitions/generated.Todo"
                         }
                     },
                     "400": {
@@ -134,7 +134,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Todo"
+                                "$ref": "#/definitions/generated.Todo"
                             }
                         }
                     }
@@ -143,26 +143,70 @@
         }
     },
     "definitions": {
-        "models.Todo": {
+        "generated.CreateTodoParams": {
             "type": "object",
             "properties": {
-                "body": {
-                    "type": "string"
-                },
                 "category": {
-                    "type": "string"
+                    "$ref": "#/definitions/sql.NullString"
                 },
                 "deadline": {
+                    "$ref": "#/definitions/sql.NullTime"
+                },
+                "iscompleted": {
+                    "type": "boolean"
+                },
+                "text": {
                     "type": "string"
                 },
-                "done": {
-                    "type": "boolean"
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "generated.Todo": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "$ref": "#/definitions/sql.NullString"
+                },
+                "deadline": {
+                    "$ref": "#/definitions/sql.NullTime"
                 },
                 "id": {
                     "type": "integer"
                 },
+                "iscompleted": {
+                    "type": "boolean"
+                },
+                "text": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "sql.NullString": {
+            "type": "object",
+            "properties": {
+                "string": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if String is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
+        "sql.NullTime": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
                 }
             }
         }
